Revert "Update .gitattributes"
This reverts commit 9594678305f73359161088b90eadf9c9bd93291f

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,10 @@
 *.conf text eol=lf
 *.sh text eol=lf
 *.index text eol=lf
+
+##############
+### Binary ###
+##############
+
+*.png binary
+*.svg binary
