--- a/build-source/config/backgrounds.conf
+++ b/build-source/config/backgrounds.conf
@@ -3,19 +3,19 @@
 ### Remove or comment the lines you don't want to build ###
 ###########################################################
 
-#70x53;62x45;dark;blue
-#70x53;62x45;dark;reflection
-#70x53;62x45;dark;transparent
-#70x53;62x45;dark;white
-#70x53;62x45;light;black
-#70x53;62x45;light;transparent
+# 70x53;62x45;dark;blue
+# 70x53;62x45;dark;reflection
+# 70x53;62x45;dark;transparent
+# 70x53;62x45;dark;white
+# 70x53;62x45;light;black
+# 70x53;62x45;light;transparent
 
-100x60;86x46;dark;blue
-# 100x60;86x46;dark;reflection
-# 100x60;86x46;dark;transparent
+# 100x60;86x46;dark;blue
+100x60;86x46;dark;reflection
+100x60;86x46;dark;transparent
 # 100x60;86x46;dark;white
-# 100x60;86x46;light;black
-# 100x60;86x46;light;transparent
+100x60;86x46;light;black
+100x60;86x46;light;transparent
 
 # 220x132;190x102;dark;blue
 # 220x132;190x102;dark;reflection
@@ -36,4 +36,4 @@
 # 400x240;370x210;light;transparent
 # 400x240;400x240;light;transparent
 
-# 800x450;760x410;light;transparent
+800x450;760x410;light;transparent
