--- a/build-source/config/backgrounds.conf
+++ b/build-source/config/backgrounds.conf
@@ -3,12 +3,12 @@
 ### Remove or comment the lines you don't want to build ###
 ###########################################################
 
-70x53;62x45;dark;blue
-70x53;62x45;dark;reflection
-70x53;62x45;dark;transparent
-70x53;62x45;dark;white
-70x53;62x45;light;black
-70x53;62x45;light;transparent
+# 70x53;62x45;dark;blue
+# 70x53;62x45;dark;reflection
+# 70x53;62x45;dark;transparent
+# 70x53;62x45;dark;white
+# 70x53;62x45;light;black
+# 70x53;62x45;light;transparent
 
 100x60;86x46;dark;blue
 100x60;86x46;dark;reflection
