--- a/.drone.yml
+++ b/.drone.yml
@@ -28,6 +28,7 @@ trigger:
 steps:
 - name: build
   image: picons/picons
+  tmpfs: /tmp
   pull: always
   commands:
     - ./2-build-picons.sh snp-full
@@ -51,6 +52,7 @@ trigger:
 steps:
 - name: build
   image: picons/picons
+  tmpfs: /tmp
   pull: always
   commands:
     - ./2-build-picons.sh srp-full
