--- a/.drone.yml
+++ b/.drone.yml
@@ -28,7 +28,7 @@ trigger:
 steps:
 - name: build
   image: picons/picons
-  tmpfs: /tmp/picons
+  shm_size: '2gb'
   pull: always
   commands:
     - ./2-build-picons.sh snp-full
@@ -52,7 +52,7 @@ trigger:
 steps:
 - name: build
   image: picons/picons
-  tmpfs: /tmp/picons
+  shm_size: '2gb'
   pull: always
   commands:
     - ./2-build-picons.sh srp-full
