--- a/.github/workflows/build-picons-srp.yml
+++ b/.github/workflows/build-picons-srp.yml
@@ -1,8 +1,10 @@
 name: Build Picons SRP
-on: push
+on:
+  schedule:
+    - cron:  '0 0 * * 0'
 
 jobs:
-  update:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
