improve fault check

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,4 +11,4 @@ jobs:
         bash ./resources/tools/check-index.sh ./build-source srp $PWD/errors_detected
         bash ./resources/tools/check-index.sh ./build-source snp $PWD/errors_detected
         bash ./resources/tools/check-logos.sh ./build-source/logos $PWD/errors_detected
-        [[ -f $PWD/errors_detected ]] && exit 1
+        if [[ -f $PWD/errors_detected ]]; then echo "Errors were found in the repository!"; exit 1; fi
