--- a/.github/workflows/build-picons-srp.yml
+++ b/.github/workflows/build-picons-srp.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Upload the picons
       uses: skx/github-action-publish-binaries@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
         args: 'build-output/binaries-srp-full/*'
