--- a/build-source/config/backgrounds.conf
+++ b/build-source/config/backgrounds.conf
@@ -12,18 +12,18 @@
 
 # 100x60;86x46;dark;blue
 100x60;86x46;dark;reflection
-##100x60;86x46;dark;transparent
+100x60;86x46;dark;transparent
 # 100x60;86x46;dark;white
 # 100x60;86x46;light;black
-##100x60;86x46;light;transparent
+100x60;86x46;light;transparent
 
 # 220x132;190x102;dark;blue
-##220x132;190x102;dark;reflection
-##220x132;190x102;dark;transparent
+220x132;190x102;dark;reflection
+220x132;190x102;dark;transparent
 # 220x132;220x132;dark;transparent
 # 220x132;190x102;dark;white
 # 220x132;190x102;light;black
-##220x132;190x102;light;transparent
+220x132;190x102;light;transparent
 # 220x132;220x132;light;transparent
 
 # 256x256;226x226;light;transparent
