Revert "always do check for pr"
This reverts commit 3ce3c4d24833547bb0940075a32700ee3cf1e1b4.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'build-source/logos/**'
+      - 'build-source/snp.index'
+      - 'build-source/srp.index'
 
 jobs:
   checks:
