--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
         id: version
         run: |
           hash=$(git rev-parse --short HEAD)
-          echo "::set-output name=version::$(date --date=@$(git show -s --format=%ct $hash) +'%Y-%m-%d--%H-%M-%S')"
+          echo "::set-output name=version::$(date --utc --date=@$(git show -s --format=%ct $hash) +'%Y-%m-%d--%H-%M-%S')"
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
