--- a/.github/workflows/build-picons-srp.yml
+++ b/.github/workflows/build-picons-srp.yml
@@ -28,3 +28,15 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
         args: 'build-output/binaries-srp/*'
+    - name: Build srp-ziggo picons
+      run: |
+        mv ./build-input/ziggo ./build-input/enigma2
+        bash 1-build-servicelist.sh srp
+        bash 2-build-picons.sh srp -ziggo
+        rm -rf ./build-input/enigma2
+    - name: Upload srp-ziggo picons
+      uses: skx/github-action-publish-binaries@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      with:
+        args: 'build-output/binaries-srp/*'
