--- a/.github/workflows/build-picons-srp-full.yml
+++ b/.github/workflows/build-picons-srp-full.yml
@@ -12,7 +12,7 @@ jobs:
         sudo apt update
         sudo apt install -y --no-install-recommends --no-install-suggests git xz-utils binutils pngquant imagemagick librsvg2-bin jq
     - name: Checkout the repository
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
     - name: Build srp-full picons
       run: |
         bash 2-build-picons.sh srp-full
